--- a/footer.html
+++ b/footer.html
@@ -1,14 +1,33 @@
-<footer class="footer">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<footer class="site-footer">
   <div class="footer-container">
-    <div class="footer-logo">QRPro</div>
+    <div class="footer-brand">
+      <h3><span style="color:#00c6ff;">QR</span>Pro</h3>
+      <p>Create high-quality, customizable QR codes instantly with logos, colors, and shapes. Free, fast, and secure.</p>
+    </div>
+
     <div class="footer-links">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="privacy.html">Privacy</a>
-      <a href="contact.html">Contact</a>
+      <h4>Quick Links</h4>
+      <ul>
+        <li><a href="index.html">QR Code Generator</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="privacy.html">Privacy Policy</a></li>
+        <li><a href="faq.html">FAQ</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     </div>
-    <div class="footer-copy">
-      © 2025 QRPro. All rights reserved.
+
+    <div class="footer-contact">
+      <h4>Connect</h4>
+      <ul class="social-icons">
+        <li><a href="#" title="Twitter"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="#" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a></li>
+        <li><a href="#" title="GitHub"><i class="fab fa-github"></i></a></li>
+        <li><a href="#" title="Email"><i class="fas fa-envelope"></i></a></li>
+      </ul>
     </div>
+  </div>
+  <div class="footer-bottom">
+    <p>&copy; 2025 QRPro. All rights reserved.</p>
   </div>
 </footer>
