--- a/navbar.html
+++ b/navbar.html
@@ -6,9 +6,10 @@
   <ul class="nav-links" id="nav-links">
     <li><a href="index.html">Home</a></li>
     <li><a href="generator.html">QR Generator</a></li>
-    <li><a href="features.html">Features</a></li>
     <li><a href="about.html">About</a></li>
+    <li><a href="privacy.html">Privacy policy</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
   </div>
 </nav>
+
