--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About Us - QRSync</title>
+  <title>About Us - QRPro</title>
   <meta name="description" content="Learn about QRSync – your go-to free and customizable QR Code Generator. Discover our mission and how we help users create stylish, branded QR codes easily.">
   <link rel="canonical" href="https://qrcodegeneratorpro.netlify.app/about.html" />
   <link rel="icon" href="assets/favicon.png" />
