--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- Open Graph Meta Tags -->
 <meta property="og:title" content="Free QR Code Generator - Custom QR with Logo & Colors" />
 <meta property="og:description" content="Generate and download custom QR codes for URLs, text, WiFi, vCards, and more. Supports logos, colors, and multiple formats." />
-<meta property="og:image" content="assets/qr-generator-preview.png" />
+<meta property="og:image" content="https://qrcodegeneratorpro.netlify.app/assets/qr-generator-preview.png" />
 <meta property="og:url" content="https://qrcodegeneratorpro.netlify.app/" />
 <meta property="fb:app_id" content="000000000000000" />
 <meta property="og:type" content="website" />
