--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About Us - QRPro</title>
-  <meta name="description" content="Learn about QRSync – your go-to free and customizable QR Code Generator. Discover our mission and how we help users create stylish, branded QR codes easily.">
+  <meta name="description" content="Learn about QRPro – your go-to free and customizable QR Code Generator. Discover our mission and how we help users create stylish, branded QR codes easily.">
   <link rel="canonical" href="https://qrcodegeneratorpro.netlify.app/about.html" />
   <link rel="icon" href="assets/favicon.png" />
   <link href="style.css" rel="stylesheet" />
@@ -109,7 +109,7 @@
   <h1 style="text-align: center;">About QRPro</h1>
 
   <p style="font-size: 1.1rem; line-height: 1.8;">
-    <strong>QRPro</strong> is a modern, free, and fully customizable QR Code Generator designed to make your digital life easier. Whether you need a code for a website, event, Wi-Fi, or digital contact card, QRSync helps you create professional and stylish QR codes in seconds.
+    <strong>QRPro</strong> is a modern, free, and fully customizable QR Code Generator designed to make your digital life easier. Whether you need a code for a website, event, Wi-Fi, or digital contact card, QRPro helps you create professional and stylish QR codes in seconds.
   </p>
 
 
