--- a/footer.html
+++ b/footer.html
@@ -10,6 +10,7 @@
       <h4>Quick Links</h4>
       <ul>
         <li><a href="index.html">QR Code Generator</a></li>
+        <li><a href="blog.html">Blog</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="privacy.html">Privacy Policy</a></li>
         <li><a href="faq.html">FAQ</a></li>
