--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Frequently Asked Questions - QRSync</title>
+  <title>Frequently Asked Questions - QRPro</title>
   <link href="style.css" rel="stylesheet" />
   <style>
     /* FAQ Page Styles */
