--- a/navbar.html
+++ b/navbar.html
@@ -5,7 +5,7 @@
   <div class="menu-toggle" onclick="toggleMenu()">☰</div>
   <ul class="nav-links" id="nav-links">
     <li><a href="index.html">Home</a></li>
-    <li><a href="generator.html">QR Generator</a></li>
+    <li><a href="blog.html">Blog</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="privacy.html">Privacy policy</a></li>
     <li><a href="contact.html">Contact</a></li>
