--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,7 @@
 <!-- navbar.html -->
 <nav class="navbar">
     <div class="nav-container">
-  <div class="logo">QR<span>Pro</span></div>
+  <a href="index.html" style="text-decoration: none;"><div class="logo">QR<span>Pro</span></div></a>
   <div class="menu-toggle" onclick="toggleMenu()">☰</div>
   <ul class="nav-links" id="nav-links">
     <li><a href="index.html">Home</a></li>
