--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
 <footer class="site-footer">
   <div class="footer-container">
     <div class="footer-brand">
-      <h3><span style="color:#00c6ff;">QR</span>Pro</h3>
+      <a href="index.html" style="text-decoration: none;"><h3><span style="color:#00c6ff;">QR</span>Pro</h3></a>
       <p>Create high-quality, customizable QR codes instantly with logos, colors, and shapes. Free, fast, and secure.</p>
     </div>
 
