--- a/index.html
+++ b/index.html
@@ -51,6 +51,18 @@
 
 
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0EBBRQBDV4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0EBBRQBDV4');
+</script>
+
+
 <body>
 <div id="navbarContainer"></div>
 <script>
