--- a/navbar.html
+++ b/navbar.html
@@ -1,4 +1,5 @@
 <!-- navbar.html -->
+ <meta name="google-adsense-account" content="ca-pub-4904662619826234">
 <nav class="navbar">
     <div class="nav-container">
   <a href="index.html" style="text-decoration: none;"><div class="logo">QR<span>Pro</span></div></a>
