--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
 <meta name="twitter:image" content="https://qrcodegeneratorpro.netlify.app/preview-image.png" />
 <meta name="twitter:site" content="@YourTwitterHandle" />
 
-
- 
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/qr-code-styling/lib/qr-code-styling.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
@@ -192,6 +189,11 @@
     <li>Click “Generate QR Code” to view your unique design.</li>
     <li>Download your QR code in PNG, SVG, or PDF format — ready for print or digital use.</li>
   </ol>
+</section>
+
+<section class="seo-text">
+  <h2>Benefits of Using QR Codes in Your Business</h2>
+  <p>QR codes are a powerful tool for enhancing customer engagement and simplifying communication. By embedding essential information such as website URLs, product details, or event invites into a single scannable code, businesses can effortlessly connect with their audience. Whether you want to promote your social media channels, guide customers to an exclusive offer, or streamline contactless payments, QR codes make it possible in seconds. They reduce the friction of manual input, boost accessibility, and offer a modern touch to marketing materials. Plus, with customizable options like colors, logos, and shapes, QR codes become an extension of your brand, helping you stand out while providing a seamless, user-friendly experience across print and digital platforms. From restaurant menus to product packaging, QR codes add value, convenience, and a smart, interactive element to your business.</p>
 </section>
 
 <script src="script.js"></script>
