--- a/about.html
+++ b/about.html
@@ -14,67 +14,79 @@
 
 .about-section {
   max-width: 760px;
-   margin-top: 150px ;
-   margin-bottom: 100px ;
-  padding: 2rem 1.5rem;
+  margin-top: var(--top-margin);
+  margin-bottom: 100px;
+      margin-left: auto;
+          margin-right: auto;
+  padding: var(--spacing-lg) var(--spacing-md);
   font-family: 'Poppins', sans-serif;
-  color: #fff;
-  background-color: #2a2a40;
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.03);
+  color: var(--text-dark);
+  background-color: var(--bg-light-hover);
   border-radius: 8px;
+  box-shadow: var(--shadow-sm);
   text-align: center;
 }
 
+/* Headings */
 .about-section h1,
 .about-section h2 {
-  color: #fff;
-  margin-top: 2rem;
-  margin-bottom: 1rem;
+  color: var(--primary);
+  margin-top: var(--spacing-lg);
+  margin-bottom: var(--spacing-md);
 }
 
 .about-section h1 {
   text-align: center;
   font-size: 2.2rem;
-  border-bottom: 2px solid #eee;
-  padding-bottom: 0.5rem;
+  border-bottom: 2px solid var(--border-color);
+  padding-bottom: var(--spacing-sm);
 }
 
+/* Paragraphs */
 .about-section p {
   font-size: 1.1rem;
   line-height: 1.75;
-  margin-bottom: 1.5rem;
+  margin-bottom: var(--spacing-lg);
   text-align: center;
+  color: var(--text-dark-secondary);
 }
 
+/* Lists */
 .about-section ul {
-  list-style: disc;
- 
-  margin-bottom: 1.5rem;
+  list-style: none;
+  margin-bottom: var(--spacing-lg);
   font-size: 1.05rem;
   line-height: 1.7;
-  list-style-type:none;
+  padding: 0;
 }
 
 .about-section ul li {
-    border:.5px dotted #fff;
-    padding: 5px;
-    margin: 5px;
-    border-radius: 10px;
-    transition: .3s;
+  border: 0.5px dotted var(--border-color);
+  padding: var(--spacing-sm);
+  margin: var(--spacing-sm);
+  border-radius: 10px;
+  transition: var(--transition-fast);
+  color: var(--text-dark);
 }
-.about-section ul li:hover{
-   padding: 8px;
+
+.about-section ul li:hover {
+  padding: var(--spacing-md);
+  background-color: var(--primary-light);
 }
+
+/* Links */
 .about-section a {
-  color: #6cb4e6;
+  color: var(--primary);
   text-decoration: none;
   border-bottom: 1px dotted transparent;
-  transition: 0.3s ease;
+  transition: var(--transition-normal);
 }
 
 .about-section a:hover {
-  border-bottom-color: #b9e2ff;
+  border-bottom-color: var(--primary);
+  background-color: var(--primary-light);
 }
+
 
 /* Responsive */
 @media (max-width: 600px) {
