--- a/contact.html
+++ b/contact.html
@@ -16,22 +16,33 @@
   max-width: 700px;
   margin: auto;
   
+  
 
 }
 h1{
     margin: 0;
 }
 .container{
-    margin-top: 100px;
+    margin-top: var(--top-margin);
     width: 100%;
+     background-color: var(--bg-light-hover);
 }
+.container p{
+  margin: 20px 0px;
 
+}
 .form-group {
   margin-bottom: 1.2rem;
 }
-
+.form-group label{
+  font-weight: bold;
+  padding: 10px;
+  display: block;
+  text-align: left;
+}
 .form-group input,
 .form-group textarea {
+  background: var(--bg-white);
   width: 100%;
   padding: 10px;
   font-family: inherit;
@@ -44,8 +55,8 @@ input{
 }
 .submit-btn {
   padding: 12px 24px;
-  background-color: #0f766e;
-  color: white;
+  background-color: var(--primary);
+  color: var(--text-light);
   border: none;
   border-radius: 6px;
   cursor: pointer;
@@ -95,17 +106,17 @@ input{
 
     <form id="contactForm">
       <div class="form-group">
-        <label for="name">Your Name</label>
+        <label for="name">Your Name:</label>
         <input type="text" id="name" name="name" required placeholder="John Doe">
       </div>
 
       <div class="form-group">
-        <label for="email">Your Email</label>
+        <label for="email">Your Email:</label>
         <input type="email" id="email" name="email" required placeholder="you@example.com">
       </div>
 
       <div class="form-group">
-        <label for="message">Your Message</label>
+        <label for="message">Your Message:</label>
         <textarea id="message" name="message" rows="5" required placeholder="Your message here..."></textarea>
       </div>
 
